--- a/Web/Views/AdminDashboard/Index.cshtml
+++ b/Web/Views/AdminDashboard/Index.cshtml
@@ -30,7 +30,7 @@
                         <div class="col mr-2">
                             @*Earnings (Monthly)*@
                             <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Total Departments
+                                Total Brand
                             </div>
                             @*$40,000*@
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalDepartments</div>
@@ -50,7 +50,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
-                                Total Bathces
+                                Total Branches
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalBatches</div>
                         </div>
@@ -69,7 +69,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Total Teachers
+                                Total Categories
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalTeachers</div>
                         </div>
@@ -115,7 +115,7 @@
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
                             <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Total Students
+                                Total Products
                             </div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">@ViewBag.TotalStudents</div>
                         </div>
