a. listing page maxstring size issue resolved. b. Product download, update and delete feature implemented.

--- a/Web/Views/Product/AddNew.cshtml
+++ b/Web/Views/Product/AddNew.cshtml
@@ -14,7 +14,7 @@
 
     <div class="card shadow mb-4">
         <div class="card-body">
-            <form asp-action="ProductAddEdit" asp-controller="PRoduct" method="post" class="form-horizontal" id="frmAddNewProduct" enctype="multipart/form-data" autocomplete="off">
+            <form asp-action="ProductAddEdit" asp-controller="Product" method="post" class="form-horizontal" id="frmAddNewProduct" enctype="multipart/form-data" autocomplete="off">
                 <input type="hidden" asp-for="ProductId" value="0" />
                 <div class="form-group">
                     <div class="row">
