--- a/Web/Views/Shared/_Admin_Layout.cshtml
+++ b/Web/Views/Shared/_Admin_Layout.cshtml
@@ -21,16 +21,20 @@
             padding-right: 0px !important;
         }
 
+        .bg-info-action {
+            color: #117a8b;
+        }
+
         .bg-view-action {
-            color: #36b9cc;
+            color: #0062cc;
         }
 
         .bg-edit-action {
-            color: #1cc88a;
+            color: #28a745;
         }
 
         .bg-delete-action {
-            color: #e74a3b;
+            color: #bd2130;
         }
 
         .disabler {
