LoggedOut redirection issue fixed and product delete feature hide implemented.

--- a/Web/Views/Product/Index.cshtml
+++ b/Web/Views/Product/Index.cshtml
@@ -129,8 +129,8 @@
                     {
                         "title": "Action",//Column Number:9
                         "render": function (data, type, row, meta) {
-                            return '<a class="update" href="/Product/Edit/' + row.productId + '" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit bg-edit-action"></i></a>'
-                                + ' &nbsp;<span class="delete" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt bg-delete-action"></i></span>';
+                            return '<a class="update" href="/Product/Edit/' + row.productId + '" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit bg-edit-action"></i></a>';
+                                //+ ' &nbsp;<span class="delete" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt bg-delete-action"></i></span>';
                         }
                     }
                 ],
