--- a/Web/Views/AdminDashboard/Index.cshtml
+++ b/Web/Views/AdminDashboard/Index.cshtml
@@ -151,7 +151,7 @@
         <div class="col-xl-4 col-lg-5">
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Academic Students</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Company Brands</h6>
                     <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -165,13 +165,13 @@
                     </div>
                     <div class="mt-4 text-center small">
                         <span class="mr-2">
-                            <i class="fas fa-circle text-primary"></i> Male
+                            <i class="fas fa-circle text-primary"></i> Hafeisi
                         </span>
                         <span class="mr-2">
-                            <i class="fas fa-circle text-success"></i> Female
+                            <i class="fas fa-circle text-success"></i> Palm
                         </span>
                         <span class="mr-2">
-                            <i class="fas fa-circle text-info"></i> Disabled
+                            <i class="fas fa-circle text-info"></i> Shetu
                         </span>
                     </div>
                 </div>
