--- a/Web/Views/AdminDashboard/Index.cshtml
+++ b/Web/Views/AdminDashboard/Index.cshtml
@@ -134,7 +134,7 @@
         <div class="col-xl-8 col-lg-7">
             <div class="card shadow mb-4">
                 <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Academic Calendar(With Events/Holidays)</h6>
+                    <h6 class="m-0 font-weight-bold text-primary">Activity Calendar(With Events/Holidays)</h6>
                     <div class="dropdown no-arrow">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
