--- a/Web/Views/Product/Index.cshtml
+++ b/Web/Views/Product/Index.cshtml
@@ -183,7 +183,7 @@
                     {
                         "title": "Action",//Column Number:11
                         "render": function (data, type, row, meta) {
-                            return '<a class="update" href="/Product/Edit/' + row.productId + '" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit bg-edit-action"></i></a>';-------
+                            return '<a class="update" href="/Product/Edit/' + row.productId + '" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit bg-edit-action"></i></a>';
                             //return '<a class="update" href="/Product/Edit/' + row.productId + '" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-edit bg-edit-action"></i></a> &nbsp;<span class="delete" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fas fa-trash-alt bg-delete-action"></i></span>';
                         }
                     }
